# polymarket-rs

./: Cargo.toml  README.md
examples/: authenticated_trading.rs  gamma_markets.rs  public_data.rs  websocket_market.rs
src/: error.rs  lib.rs
src/client/: authenticated.rs  clob.rs  data.rs  mod.rs  public.rs  trading.rs
src/http/: client.rs
src/orders/: builder.rs  mod.rs  rounding.rs
src/request/: mod.rs  pagination.rs
src/types/: enums.rs  gamma.rs  market.rs  mod.rs  order.rs  serde_helpers.rs  trade.rs  websocket.rs
