[package]
name = "polymarket-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Rust client library for the Polymarket CLOB API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/polymarket-rs"
keywords = ["polymarket", "prediction-markets", "ethereum", "trading"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]

[dependencies]
# Ethereum & Crypto
alloy-primitives = "0.8.12"
alloy-sol-types = { version = "0.8.12", features = ["eip712-serde"] }
alloy-signer = "0.7.2"
alloy-signer-local = "0.7.2"

# HTTP & Async
reqwest = { version = "0.12.9", features = ["json"] }
tokio = { version = "1.41.1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Decimal math
rust_decimal = { version = "1.36.0", features = ["serde-str"] }

# Cryptography
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22.1"

# Random
rand = "0.8.5"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "polymarket_rs"
path = "src/lib.rs"
